--- a/DAO/src/recursos/database.properties
+++ b/DAO/src/recursos/database.properties
@@ -1,4 +1,5 @@
 #Datos de la conexion Maria DB
+db.driver=org.mariadb.jdbc.Driver
 db.url=jdbc:mariadb://localhost:3306/digitalers2
 db.user=root
 db.pass=
